--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ data:
     gaze_dir: "gaze_positions/"
     surfaces_dir: "surfaces/"
     times_dir: "helper_files/"
-    object_positions: "object_positions/object_positions.csv"
+    object_positions: "object_positions/"
   
 experiment:
   id: "debug"
