--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,11 @@
 data:
   input:
-    root: "/Users/pgeorgis/Documents/projects/dgame2/dg2_analysis/"
+    root: "./dgame-test-data/preproc"
     audio_dir: "audio/"
     eeg_dir: "eeg/"
-    fixations_dir: "fixations/"
-    gaze_dir: "gaze_positions/"
-    surfaces_dir: "surfaces/"
+    fixations_dir: "eyetracking/fixations/"
+    gaze_dir: "eyetracking/gaze_positions/"
+    surfaces_dir: "eyetracking/surfaces/"
     times_dir: "helper_files/"
     object_positions: "object_positions/"
   
