Add python script for analysis step F, which calls MATLAB script (not yet added)

--- a/config.yml
+++ b/config.yml
@@ -56,6 +56,8 @@ experiment:
       time_cluster_analysis: false
     Db_plot_descriptive_fixation:
       enabled: true
+    F_preproc_EEG:
+      enabled: true
 
 analysis:
   matlab_root: ../dgame2/dg2_analysis/  # Path where MATLAB toolboxes/dependencies are mounted
