--- a/config.yml
+++ b/config.yml
@@ -60,6 +60,8 @@ experiment:
       enabled: true
     G_deconvolution_ERPs:
       enabled: true
+    H_reconstruct_ERPs:
+      enabled: true
 
 analysis:
   matlab_root: ../dgame2/dg2_analysis/  # Path where MATLAB toolboxes/dependencies are mounted
