Enable control of number of permutations and whether to include baseline in model from experiment config

--- a/config.yml
+++ b/config.yml
@@ -66,6 +66,8 @@ experiment:
       enabled: true
     Ja_lm_permute_and_plot_fixations:
       enabled: true
+      n_permutations: 2000
+      include_baseline: false  # TODO should the default be true or false?
     Jb_lm_permute_and_plot_language:
       enabled: true
 
