Add specification of removed electrodes to experiment config

--- a/config.yml
+++ b/config.yml
@@ -58,6 +58,12 @@ experiment:
       enabled: true
     F_preproc_EEG:
       enabled: true
+      removed_electrodes: [  # channels that were removed to fit eyetracking glasses
+        'FTT10h',
+        'FTT9h',
+        'FFT10h',
+        'FFT9h',
+      ]
     G_deconvolution_ERPs:
       enabled: true
     H_reconstruct_ERPs:
