--- a/config/dgame2_defaults.yml
+++ b/config/dgame2_defaults.yml
@@ -54,10 +54,7 @@ analysis:
       enabled: true
     Ia_plot_rerps:
       enabled: true
-    Ja_lm_permute_and_plot_fixations:
+    J_lm_permute_and_plot:
       enabled: true
       n_permutations: 2000
       include_baseline: false  # TODO should the default be true or false?
-      alpha: 0.05
-    Jb_lm_permute_and_plot_language:
-      enabled: true
