--- a/config/dgame2_defaults.yml
+++ b/config/dgame2_defaults.yml
@@ -52,7 +52,7 @@ analysis:
       enabled: true
     H_reconstruct_ERPs:
       enabled: true
-    Ia_plot_rerps:
+    I_plot_rERPs:
       enabled: true
     J_lm_permute_and_plot:
       enabled: true
