Rename preproc/helper_files directory to times within experiment outdir; time files written by MATLAB script A

--- a/config/dgame2_defaults.yml
+++ b/config/dgame2_defaults.yml
@@ -7,7 +7,7 @@ data:
     fixations_dir: "eyetracking/fixations/"
     gaze_dir: "eyetracking/gaze_positions/"
     surfaces_dir: "eyetracking/surfaces/"
-    times_dir: "helper_files/"
+    times_dir: "times/"
     object_positions: "object_positions/"
     recordings_dir: "recordings/"
     xdf_dir: "xdf/"
