--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-# flake8==7.2.0
-# flake8-bugbear==24.12.12
-# flake8-todos==0.3.1
-numpy==1.24.4
+flake8==7.2.0
+flake8-bugbear==24.12.12
+flake8-todos==0.3.1
+numpy==2.3.0
 packaging==25.0
-pandas==2.0.3
+pandas==2.3.0
 PyYAML==6.0.2
 requests==2.32.4
 rpy2==3.6.1
-statsmodels==0.14.1
+statsmodels==0.14.5
 tqdm==4.67.1
