--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ numpy==2.3.0
 packaging==25.0
 pandas==2.3.0
 PyYAML==6.0.2
+pyxdf==1.17.3
 requests==2.32.4
 rpy2==3.6.1
+scipy==1.16.1
 statsmodels==0.14.5
 tqdm==4.67.1
