--- a/config/dgame2_defaults.yml
+++ b/config/dgame2_defaults.yml
@@ -18,8 +18,9 @@ experiment:
   fillers: []
 
 analysis:
+  matlab_version: "R2024b"
   # Path where MATLAB toolboxes/dependencies are mounted
-  matlab_root: "./matlab"  
+  matlab_root: "./matlab"
   steps:
     A_export_audio_and_et_times:
       enabled: true
